--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,16 +16,21 @@
             android:name=".MainActivity"
             android:exported="true"
             android:theme="@style/Theme.Taller01TEST1">
-        </activity>
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true"
-            android:theme="@style/Theme.Taller01TEST1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Taller01TEST1">
+        </activity>
+        <activity
+            android:name=".AddToListActivity"
+            android:exported="true"
+            android:theme="@style/Theme.Taller01TEST1">
         </activity>
     </application>
 
